--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div id="todayDate"></div>
       <p>오늘의 할 일을 기록해보세요</p>
       <div id="count">
-        <p>🔥:<span class="todoCount">0</span></p>
-        <p>✅:<span class="doneCount">0</span></p>
+        <p>🔥:<span id="todoCount">0</span>개</p>
+        <p>✅:<span id="doneCount">0</span>개</p>
       </div>
       <form id="todoPost">
         <span>
