feat: 같은 이름의 할 일 추가 중복 방지

--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
         </span>
         <button id="submitBtn">등록</button>
       </form>
-      <div>
+      <div id="todolist">
         <ul id="list"></ul>
       </div>
-
     </div>
     <script src="script.js"></script>
   </body>
