--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="header">
-      <h1>To Do</h1>
+      <h1>Daily To Do List</h1>
       <div class="explain">
         <p>오늘의 할 일을 기록해보세요</p>
       </div>
@@ -18,8 +18,8 @@
       <div id="date-count-container">
         <div id="todayDate"></div>
         <div id="count">
-          <p>🔥:<span id="todoCount">0</span>개</p>
-          <p>✅:<span id="doneCount">0</span>개</p>
+          <p>🔥: <span id="todoCount">0</span>개</p>
+          <p>✅ : <span id="doneCount">0</span>개</p>
         </div>
       </div>
 
